--- a/app/src/main/res/layout/komentar.xml
+++ b/app/src/main/res/layout/komentar.xml
@@ -9,7 +9,7 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="<-"
+        android:text="@string/back"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
